crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F901_F901.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F901 [*] `raise NotImplemented` should be `raise NotImplementedError`
 --> F901.py:2:11
  |
1 | def f() -> None:
2 |     raise NotImplemented()
  |           ^^^^^^^^^^^^^^
help: Use `raise NotImplementedError`
  |
2 |     raise NotImplementedError()
  |                         +++++

F901 [*] `raise NotImplemented` should be `raise NotImplementedError`
 --> F901.py:6:11
  |
5 | def g() -> None:
6 |     raise NotImplemented
  |           ^^^^^^^^^^^^^^
help: Use `raise NotImplementedError`
  |
6 |     raise NotImplementedError
  |                         +++++

F901 [*] `raise NotImplemented` should be `raise NotImplementedError`
  --> F901.py:11:11
   |
 9 | def h() -> None:
10 |     NotImplementedError = "foo"
11 |     raise NotImplemented
   |           ^^^^^^^^^^^^^^
help: Use `raise NotImplementedError`
   |
 1 + import builtins
 2 | def f() -> None:
 3 |     raise NotImplemented()
 …
11 |     NotImplementedError = "foo"
12 ~     raise builtins.NotImplementedError
   |
