crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__augmented_assignment_after_del.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F821 Undefined name `x`
  --> <filename>:10:5
   |
 8 |     # entirely after the `del` statement. However, it should be an F821
 9 |     # error, because the name is defined in the scope, but unbound.
10 |     x += 1
   |     ^

F841 Local variable `x` is assigned to but never used
  --> <filename>:10:5
   |
 8 |     # entirely after the `del` statement. However, it should be an F821
 9 |     # error, because the name is defined in the scope, but unbound.
10 |     x += 1
   |     ^
   |
help: Remove assignment to unused variable `x`
