crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__break-outside-loop_F701.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F701 `break` outside loop
 --> F701.py:4:5
  |
2 |     break
3 | else:
4 |     break
  |     ^^^^^
5 |
6 | i = 0
  |

F701 `break` outside loop
  --> F701.py:16:5
   |
14 |         break
15 |
16 |     break
   |     ^^^^^

F701 `break` outside loop
  --> F701.py:20:5
   |
19 | class Foo:
20 |     break
   |     ^^^^^

F701 `break` outside loop
  --> F701.py:23:1
   |
23 | break
   | ^^^^^
