crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__continue-outside-loop_F702.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F702 `continue` not properly in loop
 --> F702.py:4:5
  |
2 |     continue
3 | else:
4 |     continue
  |     ^^^^^^^^
5 |
6 | i = 0
  |

F702 `continue` not properly in loop
  --> F702.py:16:5
   |
14 |         continue
15 |
16 |     continue
   |     ^^^^^^^^

F702 `continue` not properly in loop
  --> F702.py:20:5
   |
19 | class Foo:
20 |     continue
   |     ^^^^^^^^

F702 `continue` not properly in loop
  --> F702.py:23:1
   |
23 | continue
   | ^^^^^^^^
