crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__del_shadowed_global_import_in_global_scope.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F401 [*] `os` imported but unused
 --> <filename>:5:12
  |
4 | def f():
5 |     import os
  |            ^^
6 |
7 | # Despite this `del`, `import os` in `f` should still be flagged as shadowing an unused
  |
help: Remove unused import: `os`
  |
5 -     import os
5 +     pass
  |
